# tr_comp_math

./: CMakeLists.txt  readme.md
include/math/: basic.h  math_macro.h  matrix.h  quaternion.h
src/: matrix.cc  quaternion.cc
